--- a/apps/block_scout_web/assets/css/theme/_variables-non-critical.scss
+++ b/apps/block_scout_web/assets/css/theme/_variables-non-critical.scss
@@ -22,3 +22,4 @@
 // @import "tomochain_variables-non-critical";
 // @import "rsk_variables-non-critical";
 // @import "ethercore_variables-non-critical";
+@import "valorbit_variables-non-critical";
